deployment-ingress/k3s/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: k8s.cno-user-<ENV-USER-ID>.<ENV-ANIMAL>.commandemy.training
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-app
              port:
                number: 80
