deployment-ingress/k3s/flask-app-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-tls
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: k8s.<ENV-NAME>-user-<ENV-USER-ID>-01.<ENV-ANIMAL>.commandemy.training
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-app
              port:
                number: 80
